force-app/main/default/objects/Sansan_CI__LocationTransferResult__c/Sansan_CI__LocationTransferResult__c.object-meta.xml
<CustomObject>
    <label>拠点間移動結果</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>拠点間移動結果</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>