force-app/main/default/objects/Sansan_CI__LocationTransferResult__c/fields/Sansan_CI__LocationTransferErrorNum__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LocationTransferErrorNum__c</fullName>
    <label>取引先責任者追加情報更新エラー件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>